[package]
name = "lagoon"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "A thread pool crate with an array of features"
repository = "https://github.com/zesterer/lagoon"
keywords = ["threadpool", "thread", "job", "pool", "rayon"]
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]

[features]
default = ["num_cpus"]
scope = ["scopeguard"]
recv = ["oneshot"]

[dependencies]
crossbeam-channel = "0.5"
lazy_static = "1.4"
#flume = { version = "0.10", default-features = false }
num_cpus = { version = "^1", optional = true }
oneshot = { version = "0.1", optional = true }
scopeguard = { version = "1.1", optional = true }

[dev-dependencies]
criterion = "0.3"
uvth = "4.0"
threadpool = "1.8"
rusty_pool = "0.6.0"

[[bench]]
name = "threadpool"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
